hphp/test/slow/readonly_tdb/scope_if_3.php.expectf
Fatal error: This expression is readonly, its members cannot be modified in %s.php on line 21
